# build-system

./: 01_什么是构建系统.md  README.md  Steps.md  Steps补充.md  Steps补充1.md  Steps补充2.md  Steps补充5.md
Demo1/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake
Demo2/: CMakeCache.txt  CMakeLists.txt  Demo2  Makefile  MathFunctions.h  cmake_install.cmake
Demo3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo3
Demo3/math/: Makefile  cmake_install.cmake
Demo4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo4  main.cpp
Demo4/math/: CMakeLists.txt  Makefile  cmake_install.cmake
Demo5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
Demo5/Testing/Temporary/: CTestCostData.txt
Demo5/math/: CMakeLists.txt  Makefile  cmake_install.cmake
Step1/: Step1.md
Step1/Step1_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
Step2/: Step2.md
Step2/MathFunctions/: MathFunctions.cxx
Step3/: CMakeLists.txt  Step3.md
Step3/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
Step5/: CMakeLists.txt  Step5.md
Step7/: Step7.md
Step8/: Step8.md
Test/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake_study/: Steps补充1-4.md
cmake_study/Step1/: CMakeLists.txt  Step1.md  tutorial.cxx
cmake_study/Step1/Step1_build/: CMakeCache.txt  cmake_install.cmake
cmake_study/Step2/MathFunctions/: CMakeLists.txt
cmake_study/Step3/MathFunctions/: CMakeLists.txt
cmake_study/Step4/: Step4.md
cmake_study/Step5/MathFunctions/: CMakeLists.txt
cmake_study/Step6/: Step6.md
cmake_study/Test/: CMakeLists.txt
makefile-study/doc/: 01_gcc使用总结.md  02_makefile介绍.md  03_书写规则.md  04_书写命令.md  05_使用变量.md  补充1.md
makefile-study/sample1/: Makefile
makefile-study/sample2/: main.c
makefile-study/sample3/: Makefile
makefile-study/supplement/supplement1/: Makefile
makefile-study/supplement/supplement2/: Makefile  b.sh  c.sh
makefile_study/doc/: 02_makefile介绍.md
makefile_study/sample2/: Makefile  sample2
makefile_study/supplement/supplement2/: a.sh
meson_study/: 01_QuickStartGuide.md  02_Tutorial.md
meson_study/02_Tutorial/: meson.build
meson_study/03_subproject/: main.cpp  meson.build
